[FEAT] create email verification page, VerifyEmail component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,17 @@
 body {
   color: #FFFFFF;
   background:  #161616;
-}
+};
 
 
 button{
   clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
+};
+
+@layer utilities {
+  @media (min-width: 768px) {
+    .clip-custom {
+      clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
+    }
+  }
 }
