[FIX] button styles in globals.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,11 +11,12 @@ body {
 };
 
 
-button{
-  clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
-};
-
 @layer utilities {
+  
+  button{
+    clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
+  }
+
   @media (min-width: 768px) {
     .clip-custom {
       clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
