--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  color: #FFFFFF;
-  background:  #161616;
-};
+  color: #ffffff;
+  background: #161616;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background: #272727;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d16527;
+
+  border-radius: 50px;
+  border: 3px solid #272727;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #e67639;
+}
+
+* {
+  scrollbar-color: #d16527 #272727;
+  scrollbar-width: thin;
+}
+
+.popup-container {
+  animation: fadeIn 0.3s ease-out;
+}
+
+.popup-container[data-state="closing"] {
+  animation: fadeOut 0.3s ease-out;
+}
 
 @layer utilities {
-  
-  button{
+  button {
     clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
   }
 
@@ -20,6 +52,5 @@ body {
     .clip-custom {
       clip-path: polygon(10% 0%, 100% 0%, 100% 70%, 90% 100%, 0% 100%, 0% 30%);
     }
-
-  } 
+  }
 }
